# miniaicups

./: .gitignore  .travis.yml  README.md
.circleci/: config.yml
agario/: .gitignore  README.md  RULES.md
agario/converter/: README.md  converter.py
agario/dockers/: README.md
agario/examples/: README.md
agario/local_runner/: .clang-format  .dockerignore  Dockerfile  LocalRunner.ini  README.md  config.h  console_runner.cpp  console_runner.h  console_runner.pro  constants.h  gamescene.cpp  gamescene.h  local_runner.pro  logger.h  main.cpp  mainclass.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mechanic.h  server_runner.pro  strategymodal.cpp  strategymodal.h  strategymodal.ui  tcp_connect.h  tcp_server.h
agario/local_runner_console/: constants.h  local_runner_console.pro  logger.h  main.cpp  mechanic.h
agario/server_runner/: constants.h  logger.h  mechanic.h  mechanic.pro  tcp_connect.h  tcp_server.h
agario/tcp_proxy/: main.cpp  tcp_proxy.pro
madcars/: Main.cs  QUICKSTART.md  README.md  RULES.md
madcars/Runners/: Dockerfile  localrunner.py  match_params_example.json  requirements.txt  serverrunner.py
madcars/tools/: visio_to_stdin.js
madcars/visualizer/: README.md  arrow.py  car.py  rewindviewer.cfg.example  track.py
paperio/: COLLISIONS.md  QUICKSTART.md  README.md
paperio/dockers/: README.md
paperio/dockers/rust/: Cargo.toml  Dockerfile
paperio/examples/: cpp_strategy.cpp  cs_strategy.cs  go_strategy.go  haskell_strategy.hs  java9_strategy.java  java_strategy.java  js_strategy.js  php_strategy.php  python_strategy.py  scala_strategy.scala  (+2 more)
(+201 files in other folders)
