[package]
name = "solution"
version = "0.1.0"
edition = "2018"

[dependencies]
chrono = "0.4.1"
fern = "0.5.5"
flexi_logger = "0.8.1"
lazy_static = "1.0.0"
log = "0.4.1"
num-traits = "0.2.2"
rand = "0.4.2"
serde = { version = "1.0.13", features = ["derive"] }
serde_derive = "1.0.13"
serde_json = "1.0.13"
simplelog = "0.5.1"
time = "0.1.39"
